# ASD

./: .gitignore  README.md  es1
LeetCode/ BinaryTreesWithFactors/: CMakeLists.txt  main.cpp
LeetCode/ExpressionMatching/: Cargo.toml
LeetCode/LongestPlaindromicSubset/: CMakeLists.txt  main.cpp
LeetCode/course_complition_time/: Cargo.toml
LeetCode/sorted_array_median/: Cargo.toml
Lex3/: CMakeLists.txt
Lex3/get_unbalanced/: get_unbalanced.cpp
Lex3/tree_layer/: tree_layer.cpp
Lez1/: CMakeLists.txt  brackets.cpp  brackets2.cpp  cesrtini.cpp  cestini.h  main.cpp  somma.cpp  sottomat.cpp  sottovet.cpp
Lez1/brakets_rs/: Cargo.toml  input.txt  notes.txt  test.py
Lez1/brakets_rs/src/: main.rs
Lez1/es_1/: es_1.cpp  es_1.h
Lez1/es_2/: es_2.cpp  es_2.h  input.txt
Lez1/es_3/: es_3.cpp  es_3.h  input_15.txt  input_6.txt
Lez2/: CMakeLists.txt
Lez2/intervals/: intervals.cpp
Lez2/merge_sort/: input.txt  merge_sort.cpp  sort.cpp
Lez2/swapp_sort/: swapp.cpp
Lez3/: CMakeLists.txt
Lez3/FlatLandia/: main.cpp
Lez4/: CMakeLists.txt  StessaDistanza.cpp
Lez5/: CMakeLists.txt
Lez5/Batman/: Batman.cpp
Lez5/Diametro/: Diametro.cpp
Lez5/Powarts/: Powarts.cpp  input.txt
Lez5/Visita/: Visita.cpp
Lez5/num_cammini/: num_cammini.cpp
Lez6/: CMakeLists.txt
Lez6/AmongASD/: amongasd.cpp  custom_imput.txt  custom_imput_2.txt  custom_imput_3.txt  input.txt
Lez6/CamminoMax/: cammina_max.cpp
Lez6/CicliCiclabili/: cicli_ciclabili.cpp  cicli_ciclabili_2.cpp  cicli_ciclabili_3.cpp  custom_input,txt  custom_input2.txt  input.txt
Lez6/Componente/: componente.cpp
Lez6/TopologicalOrder/: topological_order.cpp
Lez6/dividi_et_impera/: main.cpp
Lez7/: CMakeLists.txt
Lez7/Pillole/: pillole.cpp
Lez7/Sottoinsieme Creschente/: sottoinscresc.cpp  sottoinscrescV2.cpp
Lez7/zaino/: zaino.cpp  zaino_2.cpp
Lez8/: CMakeLists.txt
Lez8/LCS/: input.txt  main.cpp
Lez8/Lich/: input.txt  main.cpp  main3.cpp  main4.cpp
Lez8/MinCover/: main.cpp
Lez8/MinCoverPesata/: main.cpp
Lez8/Nassau/: input.txt  main.cpp
Lez8/backtracking/: cammini.py  combinazioni.py  somma_di_quadrati.py  somma_di_quadrati_2.py
Lez9/: CMakeLists.txt
Lez9/alpini/: alpini.cpp  input.txt
Lez9/got/: got.cpp  got2.cpp  got3.cpp  input.txt  output.txt
Lez9/tsp/: input.txt  tsp.cpp  tsp2.cpp  tsp3.cpp
Progetto/: CMakeLists.txt
Progetto/barbie/: barbie.cpp  barbie2.cpp  es1  (+5 more)
RedBlackTree/: Cargo.toml
nonna/: CMakeLists.txt
nonna/dataset/: custom1.txt
nonna/src/: Nonna.cpp  Nonna2.cpp  Nonna3.cpp  grader.cpp  main1.cpp
past_exams/: CMakeLists.txt
(+12 files in other folders)
